--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "spec"]
 	path = spec
-	url = git@github.com:whatwg/streams.git
+    url = git@github.com:gwicke/streams.git
+    branch = perfomance_improvements
